<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeID"
        android:icon="@drawable/home"
        android:contentDescription="@string/home"
        app:showAsAction="ifRoom"
        android:title="@string/home"></item>

    <item
        android:id="@+id/vendasID"
        android:icon="@drawable/money"
        android:contentDescription="@string/vendas"
        app:showAsAction="ifRoom"
        android:title="@string/vendas"></item>

    <item
        android:id="@+id/produtosID"
        android:icon="@drawable/carrinho_compras"
        android:contentDescription="@string/produtos"
        app:showAsAction="ifRoom"
        android:title="@string/produtos"></item>

</menu>