<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cliente_fragmentID"
    tools:context=".view.Clientes.ClientesFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/centerGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <TextView
        android:id="@+id/tituloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novo_cliente"
        android:textAppearance="@style/opensansextrabold"
        android:textColor="@color/preto"
        android:layout_marginBottom="30px"
        app:layout_constraintBottom_toTopOf="@+id/nomeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nomeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/nome_cliente"
        android:inputType="text"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/nome_empresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nome_empresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/empresa"
        android:inputType="text"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/descricaoEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/descricaoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/endereco_cliente"
        android:inputType="text"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/valorEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/valorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/tel_cliente"
        android:inputType="numberDecimal"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/dataVencimentoEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/dataVencimentoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/email_cliente"
        android:inputType="date"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/quantidadeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/quantidadeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:hint="@string/cnpj_cliente"
        android:inputType="number"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintTop_toTopOf="@id/centerGuide"
        />

    <Button
        android:id="@+id/cancelarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/vermelho"
        android:text="@string/cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salvarButton" />

    <Button
        android:id="@+id/salvarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="8dp"
        android:backgroundTint="@color/ciano"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantidadeEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>