<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.Vendas.VendasFragment">

    <EditText
        android:id="@+id/dtFim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/search_24"
        android:hint="@string/dtFim"
        android:inputType="date"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/cnpjEditText"
        app:layout_constraintStart_toEndOf="@+id/dtInicio"
        app:layout_constraintWidth_percent="0.33" />

    <EditText
        android:id="@+id/dtInicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/search_24"
        android:hint="@string/dtInicio"
        android:layout_margin="10dp"
        android:inputType="date"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/nomeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.33"/>

    <EditText
        android:id="@+id/nomeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/search_24"
        android:hint="@string/nome"
        android:layout_margin="10dp"
        android:inputType="text"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/ProdutosListView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.33"/>

    <EditText
        android:id="@+id/cnpjEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/search_24"
        android:hint="@string/cnpj_cliente"
        android:inputType="text"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/ProdutosListView"
        app:layout_constraintStart_toEndOf="@+id/nomeEditText"
        app:layout_constraintWidth_percent="0.33" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="13sp"
        android:backgroundTint="@color/pretoclaro"
        android:text="@string/buscar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/ProdutosListView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cnpjEditText"
        app:layout_constraintWidth_percent="0.25" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ProdutosListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>