<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.Clientes.ClientesListFragment">


    <EditText
        android:id="@+id/dtFim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/search_24"
        android:hint="@string/dtFim"
        android:inputType="date"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/valorEditText"
        app:layout_constraintStart_toEndOf="@+id/dtInicio"
        app:layout_constraintWidth_percent="0.33" />

    <EditText
        android:id="@+id/dtInicio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/search_24"
        android:hint="@string/dtInicio"
        android:inputType="date"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/nomeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.33" />

    <EditText
        android:id="@+id/nomeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/search_24"
        android:hint="@string/nome"
        android:inputType="text"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/qtdtextID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.33" />

    <EditText
        android:id="@+id/valorEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/search_24"
        android:hint="@string/cnpj_cliente"
        android:inputType="text"
        android:textColor="@color/preto"
        android:textColorHint="@color/preto"
        app:layout_constraintBottom_toTopOf="@+id/valorTextID"
        app:layout_constraintStart_toEndOf="@+id/nomeEditText"
        app:layout_constraintWidth_percent="0.33" />

    <Button
        android:id="@+id/btnAdicionar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/ciano"
        android:textSize="13sp"
        android:drawableLeft="@drawable/add"
        android:textFontWeight="23"
        android:text="@string/cliente"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.33" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pretoclaro"
        android:text="@string/buscar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/valorTextID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.33" />

    <TextView
        android:id="@+id/qtdtextID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/pretoclaro"
        android:gravity="center"
        android:text="@string/debitos"
        android:textAppearance="@style/opensanssemibold"
        android:textColor="@color/branco"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/debitosViewID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.18" />

    <ListView
        android:id="@+id/debitosViewID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.18" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/debitosViewID"
        app:layout_constraintEnd_toStartOf="@+id/clienteViewID"
        app:layout_constraintStart_toEndOf="@+id/debitosViewID"
        app:layout_constraintTop_toTopOf="@+id/debitosViewID" />

    <TextView
        android:id="@+id/nometextID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/pretoclaro"
        android:gravity="center"
        android:text="@string/cliente"
        android:textAppearance="@style/opensanssemibold"
        android:textColor="@color/branco"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/clienteViewID"
        app:layout_constraintStart_toEndOf="@+id/qtdtextID"
        app:layout_constraintWidth_percent="0.33" />

    <ListView
        android:id="@+id/clienteViewID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintWidth_percent="0.33" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/clienteViewID"
        app:layout_constraintStart_toEndOf="@+id/clienteViewID"
        app:layout_constraintTop_toTopOf="@+id/clienteViewID" />

    <TextView
        android:id="@+id/valorTextID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/pretoclaro"
        android:gravity="center"
        android:text="@string/valor"
        android:textAppearance="@style/opensanssemibold"
        android:textColor="@color/branco"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/valorTotalID"
        app:layout_constraintStart_toEndOf="@+id/nometextID"
        app:layout_constraintWidth_percent="0.26" />

    <ListView
        android:id="@+id/valorTotalID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintWidth_percent="0.25" />

    <View
        android:id="@+id/divider3"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/valorTotalID"
        app:layout_constraintStart_toEndOf="@+id/valorTotalID"
        app:layout_constraintTop_toTopOf="@+id/valorTotalID" />

    <TextView
        android:id="@+id/acoestextID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/pretoclaro"
        android:gravity="center"
        android:text="@string/acoes"
        android:textAppearance="@style/opensanssemibold"
        android:textColor="@color/branco"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/EditarID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/valorTextID"
        app:layout_constraintWidth_percent="0.23" />

    <ListView
        android:id="@+id/EditarID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintStart_toEndOf="@+id/divider3"
        app:layout_constraintWidth_percent="0.117" />

    <ListView
        android:id="@+id/removerID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.70"
        app:layout_constraintWidth_percent="0.117" />

</androidx.constraintlayout.widget.ConstraintLayout>